update module dependencies and remove unused pom file